# description_score

./: .gitignore  AGENTS.md  README.md  pyproject.toml  rerun.sh  vmpfc_module_prompt.json
brain_region_pipeline/: atlas.py  cli.py  config.py  description_io.py  encoding_eval.py  genai.py  io_utils.py  models.py  module_prompt.py  module_scorer.py  runner.py  score_aligner.py  tr_output.py
docs/: brain_region_pipeline_vmpfc_review.md
test_pipeline/: __init__.py  encoding_model.py  fmri_loader.py
tests/: test_brain_region_atlas.py  test_brain_region_description_workflow.py  test_brain_region_runner.py
vmPFC_demo/: scoring_metadata.json  segment_module_scores.jsonl  tr_descriptions_readable.jsonl  tr_features.jsonl
